tests/type-errors/specasset_unknown_id.arl
archetype specasset_unknown_id

asset my_asset identified by id {
  id : string;
  n : nat;
} initialized by {
  {"id0"; 0};
  {"id1"; 1};
  {"id2"; 2}
}

entry exec () {
  ()
}

specification asset bad_asset { a1 : n >= 1 }
